tests/Fase2-Semantic/error/t36-relational_expr_between_incompatible_types.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        a = 4.5>x;
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
